vlib/v/checker/tests/check_fn_init_as_mutable.vv
struct MyStruct {}

fn process(mut ms MyStruct) {}

fn main() {
	process(mut MyStruct{})
}
